[package]
name = "keyword-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "keywords"
path = "lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
async-once-cell = { workspace = true }
csv = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true }
tokio-test = { workspace = true }
vibrato = { workspace = true }
xz2 = { workspace = true }
zstd = { workspace = true }
